# HaskellTutorial

packageName.hsproj/: .uuid
packageName.hsproj/tutorial/: Exercise.hs  Main.hs  Simple.hs  Simple2.hs  Simple3.hs  Spirals.hs  _Exercise.hsplay  _Main.hsplay  _Simple.hsplay  _Simple2.hsplay  _Spirals.hsplay  tutorial.cabal
packageName.hsproj/tutorial/Exercise/: Exercise.hs  _Exercise.hsplay
packageName.hsproj/tutorial/Recursion/: Recursion.hs  _Recursion.hsplay
packageName.hsproj/tutorial/Tools/: Fractals.hs  LineGraphics.hs
